welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: illegal start of simple pattern
	for (i <- 0 to taille-2) {
        ^indexOfMaxValue:11: error: '=' expected but ';' found.
	posmax;
^