welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	val taille = nums.length;
	var posmax = 0;
	var max = nums(0);
	var 
	for (i <- 0 to taille-2) {
		if ( max <= nums(i+1) ) {
			 max = nums(i+1); posmax = i + 1;
		}
	}
	posmax;

	
}
